# xhal

./: .gitignore  CMakeLists.txt
xhalcore/: CMakeLists.txt
